Fixes nick column wrapping (#3)

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -337,6 +337,7 @@ ul.backlog {
 }
 
 .backlog .nick {
+    white-space: nowrap;
     padding-right: 8px;
     font-weight: 400;
     text-align: right;
